Better Java searcher